# Change log of the R package 'divDyn'


## [0.8.2 (build 743)]  - 2022-09-02
### Added
- the matchtime() function from chronosphere 0.4
- defense against trying to use divDyn() as applied function in subsample() when bin=NULL

### Changed
- subsample() will produce warnings instead of halting when the variables 'tax' or 'bin' has NAs in them. The corresponding rows are omitted automatically.
- changed bitwise and to boolean in Engine.cpp
- regenerated documentation for compatibility to HTML5, corrected some entries
- Fixed mismatching data object keys$lat, which indicated intervals for absolute paleolatitudes instead of actual paleolatitudes.


## [0.8.1 (build 740)]  - 2021-03-01
### Changed
- documentation fixes

## [0.8.0 (build 739)]  - 2021-02-26
### Changed
- binwise CR subsampling now implements std::shuffle() instead of std::random_shuffle()

## [0.8.0 (build 738)]  - 2020-08-16
### Changed
- bugfix of cleansp() that produced Gen_NA when there was a subspecies but no species name
- fix for "subgenus"


## [0.8.0 (build 737)]  - 2020-08-16
### Changed
- minor bugfix for the cleansp() function involving taxa that were missing ("")
- cleansp()'s default changed from subgenera=FALSE to subgenera=TRUE


## [0.8.0 (build 736)]  - 2019.06.12 
### Added
- Support for 'tibble' type input data.frames. 
- The tsbars() function.
- The 'age' argument for the divDyn() and fadlad() functions. With the previous composite time argument ('bin') it was difficult to handle both contiunous age and discrete bin entries, as the two implied different direction of time and applicability in the package functions. The argument 'bin' is now reserved for discrete entries, where bin number increases from earlier to later intervals. The argument 'age' is used for continuous, automatically binned time, where time flows from higher to lower numbers. The 'age' argument will be added to the binstat() function in future versions.